fixed Dtrees correctnes